<resources>
    <string name="app_name">Calendar</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="sun">日</string>
    <string name="mon">月</string>
    <string name="tue">火</string>
    <string name="wed">水</string>
    <string name="thu">木</string>
    <string name="fri">金</string>
    <string name="sat">土</string>
    <string name="_2018_2">2018.2</string>
</resources>