<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grayColor">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@color/white">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2018_2"
            android:textSize="20sp"
            android:layout_centerInParent="true"/>

        <Button
            android:id="@+id/prevButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/prev"
            android:layout_alignParentStart="true"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="10dp"/>

        <Button
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/next"
            android:layout_alignParentEnd="true"
            android:layout_marginVertical="10dp"
            android:layout_marginEnd="10dp"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="1dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginHorizontal="1dp"
            android:textAlignment="center"
            android:text="@string/sun"
            android:textColor="@color/red"
            android:background="@color/white"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="1dp"
            android:layout_weight="1"
            android:text="@string/mon"
            android:textAlignment="center"
            android:background="@color/white"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="1dp"
            android:textAlignment="center"
            android:text="@string/tue"
            android:background="@color/white"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="1dp"
            android:textAlignment="center"
            android:text="@string/wed"
            android:background="@color/white"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="1dp"
            android:textAlignment="center"
            android:text="@string/thu"
            android:background="@color/white"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="1dp"
            android:textAlignment="center"
            android:text="@string/fri"
            android:background="@color/white"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="1dp"
            android:textAlignment="center"
            android:text="@string/sat"
            android:textColor="@color/blue"
            android:background="@color/white"/>

    </LinearLayout>

<!--    <GridView-->
<!--        android:id="@+id/calendarGridView"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="0dp"-->
<!--        android:layout_weight="15"-->
<!--        android:horizontalSpacing="1dp"-->
<!--        android:layout_marginStart="1dp"-->
<!--        android:numColumns="7"-->
<!--        android:stretchMode="columnWidth"-->
<!--        android:verticalSpacing="1dp" />-->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15"/>

</LinearLayout>